# vforce

./: Cargo.toml  README.md
src/: arithmetic.rs  exponential.rs  hyperbolic.rs  lib.rs  trig.rs
src/accelerate/: fns.rs  mod.rs
